# Bots

./: Cargo.toml
crates/bins/character_cli/: Cargo.toml
crates/bins/character_cli/src/: main.rs
crates/bins/character_server/: Cargo.toml
crates/bins/character_server/src/: config.rs  database.rs  main.rs
crates/bins/core_maze_bot/: Cargo.toml
crates/bins/core_maze_bot/src/: main.rs
crates/bins/magic_forest_bot/: Cargo.toml
crates/bins/magic_forest_bot/src/: main.rs
crates/bins/mall_race_bot/: Cargo.toml
crates/bins/mall_race_bot/src/: main.rs
crates/bins/stat_hud_bot/: Cargo.toml
crates/bins/stat_hud_bot/src/: main.rs
crates/bins/time_bot/: Cargo.toml
crates/bins/time_bot/src/: main.rs
crates/bot_config/: Cargo.toml
crates/bot_config/src/: lib.rs
crates/libs/character/: Cargo.toml
crates/libs/character/src/: client.rs  error.rs  lib.rs  protocol.rs
crates/libs/database/: Cargo.toml
crates/libs/database/src/: lib.rs
crates/libs/game_manager/: Cargo.toml
crates/libs/game_manager/src/: lib.rs
crates/libs/obstacle_course/: Cargo.toml
crates/libs/obstacle_course/src/: lib.rs
crates/time_bot/: Cargo.toml
crates/time_bot/src/: config.rs  main.rs
