[package]
name = "game_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
aw_sdk = { git = "https://github.com/coremaze/awtools", package = "aw_sdk", rev = "dc51c26" }
character = { path = "../../libs/character" }
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.39", features = ["derive"] }
toml = "0.8.22"
